"Info" command added. When to check permission changed.

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -13,10 +13,12 @@
   <script src="./js/layercontrol.js"></script>
   <script src="./js/map.js"></script>
   <script src="./js/mapconsole.js"></script>
+  <script src="./js/info.js"></script>
   <script src="./js/index.js"></script>
 </head>
 <body>
 <div id="MAIN"></div>
 <div id="MAPCONSOLE-ROOT"></div>
+<div id="MAPINFO-ROOT"></div>
 </body>
 </html>
