--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -10,15 +10,17 @@
   <script src="./js/icons.js"></script>
   <script src="./js/inlinesvg.js"></script>
   <script src="./js/resources.js"></script>
-  <script src="./js/layercontrol.js"></script>
+  <script src="./js/layerswitcher.js"></script>
+  <script src="./js/centercrosslayer.js"></script>
   <script src="./js/map.js"></script>
   <script src="./js/mapconsole.js"></script>
   <script src="./js/info.js"></script>
+  <script src="./js/mapapp.js"></script>
   <script src="./js/index.js"></script>
 </head>
 <body>
 <div id="MAIN"></div>
-<div id="MAPCONSOLE-ROOT"></div>
 <div id="MAPINFO-ROOT"></div>
+<div id="MAPCONSOLE-ROOT"></div>
 </body>
 </html>
