leaflet updated, leaflet-src deleted.

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -5,7 +5,7 @@
   <title>Tokyo Map Old</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="./leaflet/leaflet.css" />
-  <script src="./leaflet/leaflet-src.js"></script>
+  <script src="./leaflet/leaflet.js"></script>
   <link rel="stylesheet" href="./css/index.css" />
   <script src="./js/icons.js"></script>
   <script src="./js/inlinesvg.js"></script>
