new map mode appears

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -12,6 +12,7 @@
   <script src="./js/resources.js"></script>
   <script src="./js/layerswitcher.js"></script>
   <script src="./js/centercrosslayer.js"></script>
+  <script src="./js/opacity.js"></script>
   <script src="./js/map.js"></script>
   <script src="./js/mapconsole.js"></script>
   <script src="./js/info.js"></script>
