icon added for the pure web app

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -18,6 +18,7 @@
   <script src="./js/info.js"></script>
   <script src="./js/mapapp.js"></script>
   <script src="./js/index.js"></script>
+  <link rel="icon" href="ic_launcher-144x144.png">
 </head>
 <body>
 <div id="MAIN"></div>
